# ironfetch

./: Cargo.toml  README.md
ascii_distros/: macos.txt  opensuse-tumbleweed.txt
src/: ascii_distros.rs  main.rs
