[package]
name = "ironfetch"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Rafał Baran <rafal06@duck.com"]
description = "A program for displaying system information in a fancy way"
homepage = "https://github.com/rafal06/ironfetch"
repository = "https://github.com/rafal06/ironfetch"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", features = ["macros"] }
sysinfo = "0.26.5"
whoami = "1.2.3"
regex = "1.6.0"
